force-app/main/default/objects/Lightning_Carousel_Image__c/Lightning_Carousel_Image__c.object-meta.xml
<CustomObject>
    <label>Lightning Carousel Image</label>
    <nameField>
        <label>Image Filename</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lightning Carousel Images</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>