force-app/main/default/objects/Lightning_Carousel_Image__c/fields/Image__c.field-meta.xml
<CustomField>
    <fullName>Image__c</fullName>
    <formula>IMAGE(Image_URL__c, &#39;Some text will show here if broken&#39;)</formula>
    <label>Image</label>
    <type>Text</type>
</CustomField>