force-app/main/default/objects/Lightning_Carousel_Image__c/fields/Image_Description__c.field-meta.xml
<CustomField>
    <fullName>Image_Description__c</fullName>
    <label>Image Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>