force-app/main/default/objects/Lightning_Carousel_Image__c/fields/Image_Heading__c.field-meta.xml
<CustomField>
    <fullName>Image_Heading__c</fullName>
    <label>Image Heading</label>
    <length>100</length>
    <type>Text</type>
</CustomField>